<resources>
    <string name="app_name" translatable="false">MoviesApp</string>
    <string name="title_activity_list" translatable="false">ListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_form" translatable="false">FormActivity</string>
    <string name="DeveloperContact">Contacto: aabarba@iesfranciscodelosrios.es</string>
    <string name="developerName">Desarrollador: Álvaro Barba Ruiz</string>
    <string name="ordenar">Ordenar</string>
    <string name="configuracion">Configuración</string>
    <string name="ayuda">Ayuda</string>
    <string name="sobreApp">Sobre Nosotros</string>
    <string name="search">Buscar</string>
    <string name="list_filmsTitle">Listado de Peliculas</string>
    <string name="formTitle">Añadir Pelicula</string>
    <string name="TypeFiction">Ficción</string>
    <string name="TypeAction">Acción</string>
    <string name="TypeDrama">Drama</string>
    <string name="TypeComedy">Comedia</string>
    <string name="TypePolice">Policiaca</string>
    <string name="TypeRomantic">Romantica</string>
    <string name="TypeChild">Infantil</string>
    <string name="addOption">Añadir opcion</string>
    <string name="DeleteForm">Borrar Formulario</string>
    <string name="Rate">Valoración (0-5)</string>
    <string name="Date">Fecha (dd/mm/aaaa)</string>
    <string name="synopsis">sinopsis</string>
    <string name="director">Director</string>
    <string name="title">Título</string>
    <string name="forWatch">Pendiente de ver</string>
    <string name="DeleteImage">Quitar imagen</string>
    <string name="save">Guardar</string>
    <string name="parametersOfSearch">Parametros de búsqueda</string>
    <string name="selectGenre">Seleccione un género</string>
    <string name="fieldTitleEmpty">Titulo vacio</string>
    <string name="FieldTitleWrong">Caracteres no permitidos</string>
    <string name="FieldDirectorEmpty">Director vacio</string>
    <string name="FieldDirectorWrong">Caracteres no permitidos</string>
    <string name="FieldSynopsisEmpty">Sinopsis vacio</string>
    <string name="FieldSynopsisWrong">Caracteres no permitidos</string>
    <string name="FieldDateEmpty">Fecha vacio</string>
    <string name="FieldDateWrong">La fecha introducida no es correcta</string>
    <string name="FieldRateEmpty">Valoracion vacia</string>
    <string name="FieldRateWrong">Numeros entre 0 y 5</string>
    <string name="FieldGenreEmpty">Genero vacio</string>
    <string name="newGenre">Añadir nuevo Genero</string>
    <string name="InsertNewGenre">Inserte nuevo genero</string>
    <string name="Insert">Insertar</string>
    <string name="cancel">Cancelar</string>
    <string name="addedSuccess">Añadido con éxito</string>
    <string name="TypeTerror" translatable="false">terror</string>
    <string name="writeExternalStorageDENIED">Permiso de escritura denegado</string>
    <string name="WriteExternalStorageGRANTED">Permiso concedido de escritura</string>
    <string name="removeAlert">Borrando</string>
    <string name="confirmDelete">¿desea borrar?</string>
    <string name="selectImage">Seleccione una imagen</string>
    <string name="result">" resultados"</string>
    <string name="SelectSpinner">Seleccionar</string>
    <string name="GenreNotEmpty">Genero no puede estar vacio</string>
</resources>