<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/order"
        android:title="@string/ordenar"
        app:showAsAction="never" />
    <item
        android:id="@+id/config"
        app:showAsAction="never"
        android:title="@string/configuracion"/>
    <item
        android:id="@+id/help"
        android:title="@string/ayuda"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutApp"
        android:title="@string/sobreApp"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

</menu>