<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AppCRUDActivity">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/AppCrudToolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      android:fontFamily="@font/sweet"
      tools:ignore="MissingConstraints" />

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/AppCrudToolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <TextView
          android:id="@+id/developerContact"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="10dp"
          android:text="@string/DeveloperContact"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="#128CA0"
          android:textSize="24sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/DeveloperName" />

      <TextView
          android:id="@+id/DeveloperName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:text="@string/developerName"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="#128CA0"
          android:textSize="24sp"
          app:layout_constraintBottom_toTopOf="@+id/developerContact"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView" />

      <TextView
          android:id="@+id/textView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="72dp"
          android:text="@string/app_name"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textColor="#128CA0"
          android:textSize="30sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:id="@+id/imageView"
          android:layout_width="337dp"
          android:layout_height="368dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView"
          app:layout_constraintVertical_bias="0.108"
          app:srcCompat="@drawable/ic_palomitas_de_maiz" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>